# mavelin

./: Cargo.toml  README.md
.github/workflows/: ci.yml
addons/test/src/: main.mol
crates/addons/: Cargo.toml
crates/addons/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/graphics/: Cargo.toml
crates/graphics/src/: common.rs  context.rs  voxel.rs
crates/io/: Cargo.toml
crates/io/src/: block_model.rs  block_states.rs  configs.rs  entity_model.rs  lib.rs
crates/meck/: Cargo.toml
crates/meck/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: packet.rs
crates/physics/: Cargo.toml
crates/physics/src/: aabb.rs  body.rs  context.rs  lib.rs  raycast.rs
crates/shared/: Cargo.toml
crates/shared/src/: color.rs  face.rs  random.rs
crates/shared/src/geometry/: box2d.rs  mod.rs  rect.rs  round_rect.rs  thickness.rs
crates/storage/: Cargo.toml
crates/storage/src/: block.rs  block_model.rs  entity.rs  lib.rs  texture.rs
crates/tween/: Cargo.toml
crates/tween/src/: lib.rs
crates/world/: Cargo.toml
crates/world/src/: bfs_light.rs  biome.rs  chunk.rs  chunk_manager.rs  lib.rs
crates/worldgen/: Cargo.toml
crates/worldgen/src/: biome.rs  chunk.rs  lakes.rs  (+1 more)
resources/: .view.ml  view.mol
resources/configs/: colors.toml
resources/entity_models/: floating.json  player.json
resources/models/: base_rose.json  blue_rose.json  bricks.json  cobblestone.json  debug.json  rose.json  stone_bricks.json
resources/shaders/: bloom.fs  clouds.wgsl  shape.fs  shape.vs  shape.wgsl  voxel.fs  voxel.vs  voxel.wgsl
(+13 files in other folders)
