[package]
name = "meralus-addons"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
ariadne = "0.6.0"
meralus-storage.workspace = true
mollie = { git = "https://github.com/meralus-project/mollie.git", features = ["ariadne"] }
serde.workspace = true
toml = "1.0.4"
tracing = "0.1.44"
