[package]
name = "mavelin-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.0", optional = true }
glam = { version = "0.33.1", features = ["bytemuck"], optional = true }
serde = { workspace = true, optional = true }

[features]
default = []
color = []
convert = []
face = []
frustum = []
geometry = ["dep:glam", "dep:bytemuck"]
lerp = []
random = []
serde = ["dep:serde", "glam?/serde"]

[lints]
workspace = true
